feature Impl message card

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "start:production": "npm run build && cross-env NODE_ENV=production node server",
     "lint": "./node_modules/.bin/eslint --fix --config .eslintrc.yml --ext js --ext jsx src .storybook || exit 0",
     "lint:fix": " ./node_modules/.bin/eslint --fix --config .eslintrc.yml --ext js --ext jsx src .storybook --fix || exit 0",
-    "lint:jenkins": " npm run lint -- --format checkstyle --output-file eslint.log || true",
     "test": "cross-env NODE_ENV=test jest --ci --reporters=default --reporters=jest-junit --coverage --passWithNoTests",
     "test:updateSnapshot": "cross-env NODE_ENV=test jest --ci --reporters=default --reporters=jest-junit --coverage --passWithNoTests --updateSnapshot",
     "storybook": "start-storybook -p 6006",
@@ -41,6 +40,7 @@
   "dependencies": {
     "@babel/polyfill": "7.8.7",
     "@material-ui/core": "^4.9.14",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@storybook/addon-storyshots": "^5.3.18",
     "@xstyled/styled-components": "^1.17.1",
     "axios": "^0.19.2",
@@ -58,6 +58,7 @@
     "jest-junit": "^10.0.0",
     "lodash": "4.17.15",
     "minimist": "1.2.5",
+    "moment": "^2.26.0",
     "prop-types": "15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -118,8 +119,8 @@
     "identity-obj-proxy": "^3.0.0",
     "image-webpack-loader": "6.0.0",
     "imports-loader": "0.8.0",
-    "jest": "^26.0.1",
-    "jest-cli": "26.0.1",
+    "jest": "25.0.0",
+    "jest-cli": "25.0.0",
     "jest-dom": "4.0.0",
     "jest-styled-components": "7.0.2",
     "lint-staged": "10.2.2",
