--- a/config.json
+++ b/config.json
@@ -1,19 +1,19 @@
 {
     "development":{
-        "indicatorMessages": "https://stagingauth.riskmethods.net/v2/indicator_messages/",
-        "auth": "https://stagingauth.riskmethods.net/oauth/token",
+        "indicatorMessages": "https://cors-anywhere.herokuapp.com/https://stagingapi.riskmethods.net/v2/indicator_messages/",
+        "auth": "https://cors-anywhere.herokuapp.com/https://stagingauth.riskmethods.net/oauth/token",
         "CLIENT_ID" : "fjHsalRElzo6JB_dvIGx6pw2p4WMT0pMjhtcW7d159Q",
         "CLIENT_SECRET" : "dSANY4dUV8cn-24WD8R9tBlWtWM70RrabWbfOne442o"
     },
     "staging":{
-        "indicatorMessages": "https://api.riskmethods.net/v2/indicator_messages/",
-        "auth": "https://stagingauth.riskmethods.net/oauth/token",
+        "indicatorMessages": "https://cors-anywhere.herokuapp.com/https://stagingapi.riskmethods.net/v2/indicator_messages/",
+        "auth": "https://cors-anywhere.herokuapp.com/https://stagingauth.riskmethods.net/oauth/token",
         "CLIENT_ID" : "fjHsalRElzo6JB_dvIGx6pw2p4WMT0pMjhtcW7d159Q",
         "CLIENT_SECRET" : "dSANY4dUV8cn-24WD8R9tBlWtWM70RrabWbfOne442o"
     },
     "production":{
-        "indicatorMessages": "https://stagingauth.riskmethods.net/v2/indicator_messages/",
-        "auth": "https://stagingauth.riskmethods.net/oauth/token",
+        "indicatorMessages": "https://cors-anywhere.herokuapp.com/https://stagingapi.riskmethods.net/v2/indicator_messages/",
+        "auth": "https://cors-anywhere.herokuapp.com/https://stagingauth.riskmethods.net/oauth/token",
         "CLIENT_ID" : "fjHsalRElzo6JB_dvIGx6pw2p4WMT0pMjhtcW7d159Q",
         "CLIENT_SECRET" : "dSANY4dUV8cn-24WD8R9tBlWtWM70RrabWbfOne442o"
     }
