--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "redux-thunk": "^2.3.0",
     "reselect": "4.0.0",
     "storybook-react-router": "^1.0.8",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "html-webpack-plugin": "4.3.0",
   },
   "devDependencies": {
     "@babel/cli": "7.8.4",
@@ -115,7 +116,6 @@
     "eslint-plugin-react-hooks": "4.0.2",
     "file-loader": "6.0.0",
     "html-loader": "1.1.0",
-    "html-webpack-plugin": "4.3.0",
     "identity-obj-proxy": "^3.0.0",
     "image-webpack-loader": "6.0.0",
     "imports-loader": "0.8.0",
