--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "reselect": "4.0.0",
     "storybook-react-router": "^1.0.8",
     "styled-components": "^5.1.0",
-    "html-webpack-plugin": "4.3.0",
+    "html-webpack-plugin": "4.3.0"
   },
   "devDependencies": {
     "@babel/cli": "7.8.4",
