--- a/package.json
+++ b/package.json
@@ -71,7 +71,8 @@
     "reselect": "4.0.0",
     "storybook-react-router": "^1.0.8",
     "styled-components": "^5.1.0",
-    "html-webpack-plugin": "4.3.0"
+    "html-webpack-plugin": "4.3.0",
+    "circular-dependency-plugin": "5.2.0"
   },
   "devDependencies": {
     "@babel/cli": "7.8.4",
@@ -99,7 +100,6 @@
     "babel-plugin-react-intl": "7.5.8",
     "babel-plugin-styled-components": "1.10.7",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
-    "circular-dependency-plugin": "5.2.0",
     "compare-versions": "3.6.0",
     "compression-webpack-plugin": "4.0.0",
     "coveralls": "3.1.0",
