--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
     "storybook-react-router": "^1.0.8",
     "styled-components": "^5.1.0",
     "html-webpack-plugin": "4.3.0",
-    "circular-dependency-plugin": "5.2.0"
+    "circular-dependency-plugin": "5.2.0",
+    "babel-loader": "8.1.0",
+    "html-loader": "1.1.0"
   },
   "devDependencies": {
     "@babel/cli": "7.8.4",
@@ -93,7 +95,6 @@
     "add-asset-html-webpack-plugin": "3.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.1.0",
-    "babel-loader": "8.1.0",
     "babel-plugin-dynamic-import-node": "2.3.3",
     "babel-plugin-lodash": "3.3.4",
     "babel-plugin-macros": "^2.8.0",
@@ -115,7 +116,6 @@
     "eslint-plugin-react": "7.20.0",
     "eslint-plugin-react-hooks": "4.0.2",
     "file-loader": "6.0.0",
-    "html-loader": "1.1.0",
     "identity-obj-proxy": "^3.0.0",
     "image-webpack-loader": "6.0.0",
     "imports-loader": "0.8.0",
